treat G_IO_ERROR_TIMED_OUT as EINTR instead of EIO

* tls/gnutls/gtlsconnection-gnutls.c (set_gnutls_error): treat
  G_IO_ERROR_TIMED_OUT as EINTR instead of EIO. Long time connections
  might be kept open and be cancellable after a timeout.

* tls/tests/connection.c: added read-time-out-then-write test.

  https://bugzilla.gnome.org/show_bug.cgi?id=710700